[project]
name = "plastokens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "flask-migrate>=4.0.7",
    "flask-mail>=0.10.0",
    "flask-security[mfa]>=5.5.2",
    "setuptools>=75.6.0",
    "argon2-cffi>=23.1.0",
    "bleach>=6.2.0",
    "wtforms>=3.2.1",
    "flask-wtf>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
